--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,14 +1,14 @@
-@use "/src/assets/style/global.scss";
+@use "/src/assets/style/vars.scss" as *;
 
 /* ШРИФТЫ */
-$button-font: "Handjet";
+$button-font: $second_font;
 
 /* РАЗМЕРЫ */
 $logo-preview-font-size: clamp(20px, 2.5vh + 3vw, 5vw);
 $preview-text-size: clamp(15px, 1vh + 1.5vw, 2.2vw);
 $button-font-size: clamp(10px, 1vh + 1.5vw, 1.5vw);
 
-$about-heading-font-size: clamp(12px, 1vh + 1.3vw, 2.2vw);
+$about-heading-font-size: clamp(14px, 1vh + 1.3vw, 2.2vw);
 $about-block-heading-font-size: clamp(10px, 0.9vh + 1.1vw, 1.3vw);
 $about-block-text-font-size: clamp(12px, 0.9vh + 1.1vw, 1.3vw);
 
@@ -158,7 +158,9 @@ $about-block-text-font-size: clamp(12px, 0.9vh + 1.1vw, 1.3vw);
         // align-items: flex-start;
         gap: 5%;
         padding: 6%;
-        background-size: cover;
+    }
+    .preview-image {
+        background-size: 100% 50%;
     }
     .preview-section {
         justify-content: flex-start;
@@ -177,6 +179,6 @@ $about-block-text-font-size: clamp(12px, 0.9vh + 1.1vw, 1.3vw);
     .little_about {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, auto);
-        padding: 5%;
+        padding: 5% 0;
     }
 }
